attempt to fix text clipping on framework tab

--- a/app/assets/stylesheets/indicators.css.scss
+++ b/app/assets/stylesheets/indicators.css.scss
@@ -81,11 +81,11 @@ h1 {
 }
 
 .big-font {
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .medium-font {
-  font-size: 16px;
+  font-size: 14px;
 }
 
 .grey-font {
@@ -244,18 +244,19 @@ $matrix-target-width: 60px;
   #focal-areas-container {
     clear: both;
     div.indicator-count {
-      width: 25%;
+      width: 35%;
       text-align: center;
       float: left;
       padding: 4px 0;
       span {
         @extend .medium-font;
+        display: block;
       }
     }
   }
   button {
     float: left;
-    width: 75%;
+    width: 65%;
     border-radius: 0;
     color: white;
     text-transform: uppercase;
